[metadata]
name = flearner
version = 0.1.0
description = FortLearner: Fortran-powered machine learning kernels with Python bindings
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/your-org/fortlearner
project_urls =
    Source = https://github.com/your-org/fortlearner
    Issues = https://github.com/your-org/fortlearner/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Fortran
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.21
    cerberus>=1.3
python_requires = >=3.9

[options.packages.find]
exclude = tests*

[options.package_data]
flearner = licenses/*
flearner.lib = *
flearner = py.typed
